--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <option value="DKK">DKK</option>
                 <option value="DOP">DOP</option>
                 <option value="EGP">EGP</option>
-                <option value="EUR">EUR</option>
+                <option value="EUR" selected>EUR</option>
                 <option value="FJD">FJD</option>
                 <option value="GBP">GBP</option>
                 <option value="GTQ">GTQ</option>
@@ -63,17 +63,17 @@
                 <option value="TRY">TRY</option>
                 <option value="TWD">TWD</option>
                 <option value="UAH">UAH</option>
-                <option value="USD" selected>USD</option>
+                <option value="USD">USD</option>
                 <option value="UYU">UYU</option>
                 <option value="VND">VND</option>
                 <option value="ZAR">ZAR</option>
             </select>
-            <input type="number" id="amount">
+            <input type="number" id="amount-one">
         </div>
 
 
         <div class="swap-rate-container">
-            <button class="btn" id="rate">
+            <button class="btn" id="swap">
                 Swap
             </button>
             <div class="rate" id="rate"></div>
